# bevy_oxr

./: +  .gitignore  Cargo.toml  README.md  flake.nix  quest2_stdout_no_stacktrace.txt  rust-toolchain.toml  tree
.cargo/: config.toml
.github/workflows/: build.yml  ci.yaml
bevy_xr_api/: Cargo.toml
bevy_xr_api/macros/: Cargo.toml
bevy_xr_api/src/: actions.rs  types.rs
crates/bevy_openxr/: Cargo.toml  README.md
crates/bevy_openxr/examples/: 3d_scene.rs  actions.rs  common_entities.rs  custom_vulkan_extensions.rs  flycam.rs  multiview.rs  overlay.rs  raw_actions.rs  sessions.rs  tracking_utils.rs  transform_utils.rs
crates/bevy_openxr/examples/android/: .gitignore  Cargo.toml  build.rs  manifest.yaml
crates/bevy_openxr/examples/android/src/: lib.rs
crates/bevy_openxr/src/: actions.rs  error.rs  extensions.rs  graphics.rs  init.rs  initt.rs  layer_builder.rs  lib.rs  render.rs  resources.rs  types.rs
crates/bevy_openxr/src/graphics/: vulkan.rs
crates/bevy_openxr/src/openxr/: action_binding.rs  action_set_attaching.rs  action_set_syncing.rs  android_thread_settings.rs  environment_blend_mode.rs  error.rs  exts.rs  foveation.rs  graphics.rs  helper_traits.rs  init.rs  layer_builder.rs  mod.rs  next_chain.rs  poll_events.rs  reference_space.rs  render.rs  resources.rs  session.rs  session_create_info_builder.rs  session_create_info_chain.rs  spaces.rs  types.rs
crates/bevy_openxr/src/openxr/features/: fb_passthrough.rs  handtracking.rs  mod.rs  overlay.rs  passthrough.rs
crates/bevy_openxr/src/openxr/graphics/: d3d12.rs  vulkan.rs
crates/bevy_webxr/: Cargo.toml  README.md
crates/bevy_webxr/src/: lib.rs
crates/bevy_xr/: Cargo.toml  README.md
crates/bevy_xr/macros/src/: lib.rs
crates/bevy_xr/src/: actions.rs  camera.rs  hand_debug_gizmos.rs  hands.rs  lib.rs  session.rs  spaces.rs  types.rs
crates/bevy_xr_utils/: Cargo.toml  README.md
crates/bevy_xr_utils/examples/: actions.rs  mndx_xdev_spaces.rs  tracking_utils.rs  transform_utils.rs
crates/bevy_xr_utils/src/: actions.rs  flycam_locomotion.rs  generic_tracker.rs  hand_gizmos.rs  lib.rs  mndx_xdev_spaces_trackers.rs  tracking_utils.rs  transform_utils.rs  xr_utils_actions.rs
crates/bevy_xr_utils/src/interaction_profile_constants/: mod.rs  valve_index_controller_profile_constants.rs
examples/: 3d_scene.rs  globe.rs  xr.rs
examples/android/: .gitignore  Cargo.toml  README.md  manifest.yaml  out
examples/android/src/: lib.rs
examples/demo/: Cargo.toml  Cargo_back.toml  Readme.md  manifest.yaml  quest2_stdout.txt  quest2_stdout_no_stacktrace.txt  tee
examples/demo/src/: lib.rs  lib_bak.rs  main.rs  setup.rs
src/: action_paths.rs  actions.rs  error.rs  input.rs  lib.rs  main.rs  openxr.rs  passthrough.rs  prelude.rs  render.rs  render_restart.rs  resource_macros.rs  resources.rs  state.rs  swapchain.rs  types.rs  webxr.rs  xr_init.rs
src/actions/: oculus_touch.rs
src/backend/: mod.rs  oxr.rs  oxr_utils.rs  traits.rs  web_utils.rs  webxr.rs
src/backend/graphics/: mod.rs  vulkan.rs
src/graphics/: d3d12.rs  extensions.rs  mod.rs  vulkan.rs
src/openxr/: extensions.rs  graphics.rs  init.rs  render.rs  resources.rs  types.rs
src/openxr/graphics/: vulkan.rs
src/openxr/init/: vulkan.rs
src/oxr/: error.rs  init.rs  layer_builder.rs  mod.rs  render.rs  resources.rs  types.rs
src/oxr/graphics/: mod.rs  vulkan.rs
src/webxr/: render.rs  resources.rs
src/xr_init/: mod.rs  schedules.rs
src/xr_input/: actions.rs  controllers.rs  debug_gizmos.rs  hand.rs  hand_poses.rs  handtracking.rs  interactions.rs  mod.rs  oculus_touch.rs  prototype_locomotion.rs  trackers.rs  xr_camera.rs
src/xr_input/hands/: common.rs  emulated.rs  hand_tracking.rs  mod.rs
srcold/: input.rs  lib.rs
srcold/xr/: mod.rs
xbuild/: default.nix
xr_api/: Cargo.toml
xr_api/src/: api.rs  api_traits.rs  error.rs  lib.rs  path.rs  types.rs
xr_api/src/backend/: mod.rs  oxr.rs  webxr.rs
xr_api/src/backend/oxr/: graphics.rs  utils.rs
xr_api/src/backend/oxr/graphics/: vulkan.rs
xr_api/src/backend/webxr/: utils.rs
