[workspace.package]
version = "0.4.0"
edition = "2024"
description = "Community crate for XR in Bevy"
repository = "https://github.com/awtterpip/bevy_oxr"
license = "MIT/Apache-2.0"

[workspace]
resolver = "2"
members = ["crates/*", "crates/bevy_openxr/examples/android"]

[workspace.dependencies]
bevy = "0.18"
bevy_ecs = { version = "0.18", default-features = false }
bevy_math = { version = "0.18", default-features = false }
bevy_render = { version = "0.18", default-features = false }
bevy_core_pipeline = { version = "0.18", default-features = false }
bevy_window = { version = "0.18", default-features = false }
bevy_winit = { version = "0.18", default-features = false }
bevy_pbr = { version = "0.18", default-features = false }
bevy_app = { version = "0.18", default-features = false }
bevy_reflect = { version = "0.18", default-features = false }
bevy_log = { version = "0.18", default-features = false }
bevy_gizmos = { version = "0.18", default-features = false }
bevy_camera = { version = "0.18", default-features = false }
bevy_color = { version = "0.18", default-features = false }
bevy_transform = { version = "0.18", default-features = false }
bevy_derive = { version = "0.18", default-features = false }
bevy_platform = { version = "0.18", default-features = false }


bevy_mod_xr = { path = "crates/bevy_xr", version = "0.4.0" }
bevy_mod_openxr = { path = "crates/bevy_openxr", version = "0.4.0" }
bevy_xr_utils = { path = "crates/bevy_xr_utils", version = "0.4.0" }
openxr = "0.21.1"
thiserror = "2.0.3"
wgpu = "27"
wgpu-hal = "27"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
