[package]
name = "xr_api"
version = "0.1.0"
edition = "2021"

[features]
default = ["linked"]
linked = ["openxr/linked"]

[dependencies]
ash = "0.37.3"
futures = "0.3.29"
glam = "0.24.1"
hashbrown = "0.14"
paste = "1.0.14"
thiserror = "1.0.51"
tracing = "0.1.40"
wgpu = "0.17.1"
wgpu-hal = "0.17.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
openxr = "0.17.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.61", features = [
    # STANDARD
    'console',
    'Document',
    'Element',
    'Headers',
    'Navigator',
    'Window',
    # IO
    # 'Url',
    # WEBGL
    'Gpu',
    'HtmlCanvasElement',
    'WebGl2RenderingContext',
    'WebGlFramebuffer',
    ## XR
    'DomPointReadOnly',
    'XrWebGlLayer',
    'XrBoundedReferenceSpace',
    'XrEye',
    'XrFrame',
    'XrHandedness',
    'XrInputSource',
    'XrInputSourceArray',
    'XrInputSourceEvent',
    'XrInputSourceEventInit',
    'XrInputSourcesChangeEvent',
    'XrJointPose',
    'XrJointSpace',
    'XrPose',
    'XrReferenceSpace',
    'XrReferenceSpaceEvent',
    'XrReferenceSpaceEventInit',
    'XrReferenceSpaceType',
    'XrRenderState',
    'XrRenderStateInit',
    'XrRigidTransform',
    'XrSession',
    'XrSessionEvent',
    'XrSessionEventInit',
    'XrSessionInit',
    'XrSessionMode',
    'XrSpace',
    'XrTargetRayMode',
    'XrView',
    'XrViewerPose',
    'XrViewport',
    'XrVisibilityState',
    'XrWebGlLayer',
    'XrWebGlLayerInit',
    'XrSystem',
] }
wasm-bindgen-futures = "0.4"
