[package]
name = "bevy_openxr"
version = "0.1.0"
edition = "2021"

[features]
default = ["vulkan", "passthrough"]
vulkan = ["dep:ash"]
passthrough = []

[dev-dependencies]
bevy_xr_utils.path = "../bevy_xr_utils"

# bevy can't be placed behind target or proc macros won't work properly
[dependencies]
bevy.workspace = true

# all other dependencies are placed under this since on wasm, this crate is completely empty
[target.'cfg(not(target_family = "wasm"))'.dependencies]
openxr = "0.18.0"
thiserror = "1.0.57"
wgpu = "0.19.3"
wgpu-hal = "0.19.3"
bevy_xr.path = "../bevy_xr"

ash = { version = "0.37.3", optional = true }

[target.'cfg(target_family = "unix")'.dependencies]
openxr = { version = "0.18.0", features = ["mint"] }

[target.'cfg(target_family = "windows")'.dependencies]
openxr = { version = "0.18.0", features = ["mint", "static"] }
