[package]
name = "bevy_mod_openxr"
description = "Community crate for OpenXR in Bevy"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["gamedev", "bevy", "Xr", "Vr", "OpenXR"]

[features]
default = ["vulkan"]
vulkan = ["dep:ash", "dep:android_system_properties"]
d3d12 = ["wgpu/dx12", "wgpu-hal/dx12", "dep:winapi"]
passthrough = []
reflect = ["dep:bevy_reflect"]
window_support = ["dep:bevy_winit", "dep:bevy_window"]

[dev-dependencies]
bevy.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
jni = "0.20"
android_system_properties = { version = "0.1.5", optional = true }

# bevy can't be placed behind target or proc macros won't work properly
[dependencies]
bevy_ecs.workspace = true
bevy_math.workspace = true
bevy_render.workspace = true
bevy_app.workspace = true
bevy_reflect = { workspace = true, optional = true }
bevy_log.workspace = true
bevy_transform.workspace = true
bevy_camera.workspace = true
bevy_derive.workspace = true
bevy_platform.workspace = true
bevy_winit = { workspace = true, optional = true }
bevy_window = { workspace = true, optional = true }

# all other dependencies are placed under this since on wasm, this crate is completely empty
[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy_mod_xr.workspace = true
openxr = { workspace = true }
thiserror.workspace = true
wgpu.workspace = true
wgpu-hal.workspace = true
ash = { version = "0.38", optional = true }

[target.'cfg(target_family = "unix")'.dependencies]
wgpu = { workspace = true, features = ["vulkan-portability"] }

[target.'cfg(target_family = "windows")'.dependencies]
openxr = { workspace = true, features = ["mint", "static"] }
winapi = { version = "0.3.9", optional = true }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
