[package]
name = "bevy_mod_webxr"
description = "future bevy_mod_xr webxr backend"
version = "0.0.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

# bevy can't be placed behind target or proc macros won't work properly
[dependencies]
bevy.workspace = true

# all dependencies are placed under this since on anything but wasm, this crate is completely empty
[target.'cfg(target_family = "wasm")'.dependencies]
thiserror = "1.0.57"
wgpu = "0.19.3"
wgpu-hal = "0.19.3"

bevy_mod_xr = { path = "../bevy_xr", version = "0.1.0-rc1" }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
