[package]
name = "bevy_xr_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "utils for bevy_mod_xr and bevy_mod_openxr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, features = ["bevy_gizmos"] }
bevy_mod_xr = { path = "../bevy_xr", version = "0.1.0" }
bevy_mod_openxr = { path = "../bevy_openxr", version = "0.1.0" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
openxr = "0.18.0"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
