[package]
name = "bevy_xr_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "utils for bevy_mod_xr and bevy_mod_openxr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, features = ["bevy_gizmos"] }
bevy_mod_xr.workspace = true
bevy_mod_openxr.workspace = true

[dev-dependencies]
bevy = { workspace = true, default-features = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
openxr.workspace = true
openxr_mndx_xdev_space = "0.1.0"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
